--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 </head>
 <body>
     <nav>
-        <img class="logo" src="Chat Logo.png" alt="">
+        <img class="logo" src="Chat_Logo.png" alt="">
+        <h2>A web Based Chat Application</h2>
     </nav>
+    
     <div class="container"> 
        <!-- <div class="message left">p1: hey, how are you?</div>
         <div class="message right">p2: fine, how about you?</div> -->
